--- a/index.html
+++ b/index.html
@@ -33,14 +33,33 @@
 
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
         </div>
 
         <div class="row">
-          <div class="col-1-of-2">Text content</div>
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+              sint nisi non ullam ut voluptas nam dolorum, laudantium assumenda
+              quibusdam sapiente autem libero exercitationem enim minus repellat
+              corrupti amet aut!
+            </p>
+
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live aventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+              laborum praesentium enim, quae atque tenetur hic maiores fugit.
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
           <div class="col-1-of-2">Image composition</div>
         </div>
       </section>
