--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
 
-    <!-- <link rel="stylesheet" href="css/icon-font.css" /> -->
+    <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png" /> -->
 
@@ -79,6 +79,56 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <div class="section-features">
+
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Dolorum ea officia
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Dolorum ea officia
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Find Your Way</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Dolorum ea officia
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Live A Healthier Life</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Dolorum 
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
       </section>
     </main>
   </body>
