--- a/index.html
+++ b/index.html
@@ -253,6 +253,13 @@
       </section>
 
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4">
+            <source src="img/video.webm" type="video/webm">
+            Your browser is not supported!
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
            We make people genuinely happy
@@ -263,6 +270,9 @@
           <div class="story">
             <figure class="story__shape">
               <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+              <figcaption class="story__caption">
+                Marry Smith
+              </figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -272,7 +282,28 @@
             </div>
           </div>
         </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+              <figcaption class="story__caption">
+                Jack Wilson
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! my life is completly different now
+              </h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae iste facilis error, incidunt dolore quis sit non iure vero id possimus quia aliquid, totam similique, explicabo magni necessitatibus maiores dolorem. Beatae iste facilis error, incidunt dolore quis sit non iure vero id possimus quia</p>
+            </div>
+          </div>
+        </div>
       
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+
       </section>
     </main>
   </body>
