Build the booking section -p1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png" /> -->
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
@@ -86,7 +86,7 @@
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
-              <i class="feature-box__icon icon-basic-world"></i>
+              <em class="feature-box__icon icon-basic-world"></em>
               <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
               <p class="feature-box__text">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -97,7 +97,7 @@
 
           <div class="col-1-of-4">
             <div class="feature-box">
-              <i class="feature-box__icon icon-basic-compass"></i>
+              <em class="feature-box__icon icon-basic-compass"></em>
               <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
               <p class="feature-box__text">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -108,7 +108,7 @@
 
           <div class="col-1-of-4">
             <div class="feature-box">
-              <i class="feature-box__icon icon-basic-map"></i>
+              <em class="feature-box__icon icon-basic-map"></em>
               <h3 class="heading-tertiary u-margin-bottom-small">Find Your Way</h3>
               <p class="feature-box__text">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -119,7 +119,7 @@
 
           <div class="col-1-of-4">
             <div class="feature-box">
-              <i class="feature-box__icon icon-basic-heart"></i>
+              <em class="feature-box__icon icon-basic-heart"></em>
               <h3 class="heading-tertiary u-margin-bottom-small">Live A Healthier Life</h3>
               <p class="feature-box__text">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -293,7 +293,7 @@
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
-                WOW! my life is completly different now
+                WOW! my life is completely different now
               </h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae iste facilis error, incidunt dolore quis sit non iure vero id possimus quia aliquid, totam similique, explicabo magni necessitatibus maiores dolorem. Beatae iste facilis error, incidunt dolore quis sit non iure vero id possimus quia</p>
             </div>
@@ -305,6 +305,33 @@
         </div>
 
       </section>
+
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <form action="#" class="form">
+                <div class="u-margin-bottom-medium">
+                  <h2 class="heading-secondary">
+                   Start booking now
+                  </h2>
+                </div>
+
+                <div class="form__group">
+                  <input type="text" class="form__input" placeholder="Full name" required id="name">
+                  <label for="name" class="form__label">Full name</label>
+                </div>
+
+                <div class="form__group">
+                  <input type="email" class="form__input" placeholder="Email address" required id="email">
+                  <label for="email" class="form__label">Email address</label>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
