--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+      <label for="navi-toggle" class="navigation__button">MENU</label>
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="logo" class="header__logo" />
@@ -374,7 +390,7 @@
         </div>
         <div class="col-1-of-2">
           <p class="footer__copyright">
-            This design built by <a href="#" class="footer__link">Jonas Schmedtmann</a>for his online course <a href="#" class="footer__link">Advance CSS and Sass</a>. Copyright &copy; by Jonas Schmedtmann.
+            This design built by <a href="#" class="footer__link">Jonas Schmedtmann </a>for his online course <a href="#" class="footer__link">Advance CSS and Sass</a>. Copyright &copy; by Jonas Schmedtmann.
           </p>
         </div>
       </div>
