Build a CSS popup - build the popup modal

--- a/index.html
+++ b/index.html
@@ -401,5 +401,24 @@
 
     </footer>
 
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+        </div>
+
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+          <h3 class="heading=tertiary u-margin-bottom-small">Importatnt &ndash; Please read these terms before booking</h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam beatae, asperiores reprehenderit voluptas nesciunt unde. Molestiae dolorum nemo dolore incidunt rerum amet, sunt saepe harum repellat deleniti praesentium quia non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptatum recusandae aperiam. Aliquam excepturi nisi quas deleniti vel adipisci numquam. Veritatis culpa porro voluptates quia minus odio et sunt laudantium?
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
