--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
           <div class="col-1-of-2">
             <div class="composition">
 
-              <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"   sizes="(max-width: 900px) 20vw,(max-width: 600px) 30vw, 300px"  alt="Photo 1" class="composition__photo composition__photo--p1" src="img/nat-1-large.jpg">
+              <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"   sizes="(max-width: 56.25em) 20vw,(max-width: 37.5em) 30vw, 300px"  alt="Photo 1" class="composition__photo composition__photo--p1" src="img/nat-1-large.jpg">
 
-              <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" sizes="(max-width: 900px) 20vw,(max-width: 600px) 30vw, 300px"  alt="Photo 2" class="composition__photo composition__photo--p2" src="img/nat-2-large.jpg">
+              <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw,(max-width: 37.5em) 30vw, 300px"  alt="Photo 2" class="composition__photo composition__photo--p2" src="img/nat-2-large.jpg">
 
-              <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" sizes="(max-width: 900px) 20vw,(max-width: 600px) 30vw, 300px"  alt="Photo 3" class="composition__photo composition__photo--p3" src="img/nat-3-large.jpg">
+              <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw,(max-width: 37.5em) 30vw, 300px"  alt="Photo 3" class="composition__photo composition__photo--p3" src="img/nat-3-large.jpg">
 
               <!-- <img
                 src="img/nat-1-large.jpg"
@@ -297,7 +297,8 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+              <img srcset="img/nat-8-small.jpg 600w, img/nat-8.jpg 2000w"   sizes="(max-width: 56.25em) 28vw,(max-width: 37.5em) 42vw, 300px"  alt="Person on a tour" class="story__img" src="img/nat-9.jpg" >
+              <!-- <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img"> -->
               <figcaption class="story__caption">
                 Marry Smith
               </figcaption>
@@ -314,7 +315,10 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+              
+
+               <img srcset="img/nat-9-small.jpg 600w, img/nat-9.jpg 2000w" sizes="(max-width: 56.25em) 28vw,(max-width: 37.5em) 42vw, 300px"  alt="Person on a tour" class="story__img" src="img/nat-9.jpg">
+              <!-- <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img"> -->
               <figcaption class="story__caption">
                 Jack Wilson
               </figcaption>
@@ -419,8 +423,13 @@
     <div class="popup" id="popup">
       <div class="popup__content">
         <div class="popup__left">
-          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
-          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+
+          <img srcset="img/nat-8-small.jpg 600w, img/nat-8.jpg 2000w"   sizes="(min-width: 1800px) 25vw, 300px"  alt="Tour photo" class="popup__img" src="img/nat-9.jpg" >
+
+          <img srcset="img/nat-9-small.jpg 600w, img/nat-9.jpg 2000w" sizes="(min-width: 1800px) 25vw, 300px"  alt="Tour photo" class="popup__img" src="img/nat-9.jpg">
+
+          <!-- <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img"> -->
         </div>
 
         <div class="popup__right">
