--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+    <script defer src="script.js"></script>  
 
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
@@ -196,7 +197,7 @@
                     </p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#popup" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn--book btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -231,7 +232,7 @@
                     </p>
                     <p class="card__price-value">$497</p>
                   </div>
-                  <a href="#popup" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn--book btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -266,7 +267,7 @@
                     </p>
                     <p class="card__price-value">$897</p>
                   </div>
-                  <a href="#popup" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn--book btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
